Showing indicator in playlists selector if map is already in playlist

--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -312,7 +312,7 @@
 
         SubscribeAndBind(PlaylistService.MapsInPlaylistsByHash, mapsInPlaylistsByHash =>
         {
-            if (!mapsInPlaylistsByHash.ContainsKey(Map.Hash))
+            if (Map?.Hash is null || !mapsInPlaylistsByHash.ContainsKey(Map.Hash))
             {
                 PlaylistsContainingMapHash = Array.Empty<Playlist>();
                 return;
